<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditEntryActivity" >
    
    <EditText
        android:id="@+id/edit_entry_text"
        android:inputType="textCapSentences"
        android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:hint="@string/edit_entry_text" />
    <EditText
        android:id="@+id/edit_response_text"
        android:inputType="textCapSentences"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_response_text" />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/edit_entry_button"
        android:onClick="editEntry"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/delete_entry_button"
        android:onClick="deleteEntry"/>

</LinearLayout>
