<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context=".QuizActivity">
    <TextView
        android:id="@+id/quiz_entry"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="center_horizontal"
        android:text="@string/quiz_entry"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/quiz_response"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:text="@string/quiz_response"
        android:textSize="25sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/quiz_prevbutton"
	        android:layout_width="0.0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:text="@string/quiz_prev_button"
	        android:onClick="prevEntry"/>
        
        <Button
            android:id="@+id/quiz_show_response_button"
	        android:layout_width="0.0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:text="@string/quiz_show_response_button"
	        android:onClick="showResponse"/>

        <Button
            android:id="@+id/quiz_next_button"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:onClick="nextEntry"
            android:text="@string/quiz_next_button" />
        
    </LinearLayout>


</LinearLayout>
