<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddEntryActivity" >
    
    <EditText
        android:id="@+id/add_entry_text"
        android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:hint="@string/add_entry_text" />
    <EditText
        android:id="@+id/add_response_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_response_text" />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/add_entry_button"
        android:onClick="addStatement"/>

</LinearLayout>
